syntax = "proto3";
package auth;

service Auth {
  rpc signUp (SignUpRequest) returns (SignUpResponse);
  rpc signIn (SignInRequest) returns (SignInResponse);
  rpc verify (VerifyRequest) returns (VerifyResponse); 
}

message Owner {
  string id = 1;
  string email = 2;
}

message SignUpRequest {
  string email = 1;
  string password = 2;
}

message SignUpResponse {
  bool success = 1;
}

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignInResponse {
  Owner owner = 1;
  string jwt = 2;
}

message VerifyRequest {
  string jwt = 1;
}

message VerifyResponse {
  Owner owner = 1;
}
